crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/es_fluent_derive__macros__derive_es_fluent__tests__expand_es_fluent_delegates_skipped_single_field_variant.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
expression: tokens
---
impl ::es_fluent::FluentMessage for LoginError {
    fn to_fluent_string_with(
        &self,
        localize: &mut dyn for<'__es_fluent_message> FnMut(
            ::es_fluent::registry::StaticFluentDomain,
            ::es_fluent::registry::StaticFluentEntryId,
            Option<&::es_fluent::FluentArgs<'__es_fluent_message>>,
        ) -> String,
    ) -> String {
        match self {
            Self::Network(value) => {
                use ::es_fluent::FluentMessage as _;
                value.to_fluent_string_with(localize)
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_LoginError {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Enum,
        type_name: "LoginError",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: None,
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
