crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/es_fluent_derive__macros__derive_es_fluent__tests__expand_es_fluent_emits_field_level_tuple_arg.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
assertion_line: 262
expression: tokens
---
impl ::es_fluent::FluentMessage for LoginError {
    fn to_fluent_string_with(
        &self,
        localize: &mut dyn for<'__es_fluent_message> FnMut(
            &str,
            &str,
            Option<
                &::std::collections::HashMap<
                    &str,
                    ::es_fluent::FluentValue<'__es_fluent_message>,
                >,
            >,
        ) -> String,
    ) -> String {
        match self {
            Self::Something(f0) => {
                let mut args = ::std::collections::HashMap::new();
                {
                    use ::es_fluent::__private::IntoFluentArgumentValue as _;
                    args.insert(
                        "value",
                        (::es_fluent::__private::FluentBorrowedArgumentValue::new(f0))
                            .into_fluent_argument_value(localize),
                    );
                }
                localize(env!("CARGO_PKG_NAME"), "login_error-Something", Some(&args))
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_LoginError {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::FtlVariant {
            name: "Something",
            ftl_key: "login_error-Something",
            args: &["value"],
            module_path: module_path!(),
            line: line!(),
        },
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Enum,
        type_name: "LoginError",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: None,
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
