crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/es_fluent_derive__macros__derive_es_fluent__tests__expand_es_fluent_generates_tokens_for_enum.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
expression: enum_tokens
---
impl ::es_fluent::FluentMessage for Status {
    fn to_fluent_string_with(
        &self,
        localize: &mut dyn for<'__es_fluent_message> FnMut(
            ::es_fluent::registry::StaticFluentDomain,
            ::es_fluent::registry::StaticFluentEntryId,
            Option<&::es_fluent::FluentArgs<'__es_fluent_message>>,
        ) -> String,
    ) -> String {
        match self {
            Self::Ready => {
                localize(
                    ::es_fluent::registry::StaticFluentDomain::new_unchecked(
                        env!("CARGO_PKG_NAME"),
                    ),
                    ::es_fluent::registry::StaticFluentEntryId::new_unchecked(
                        "status-Ready",
                    ),
                    None,
                )
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_Status {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::FtlVariant {
            name: "Ready",
            ftl_key: ::es_fluent::registry::StaticFluentEntryId::new_unchecked(
                "status-Ready",
            ),
            args: &[],
            module_path: module_path!(),
            line: line!(),
        },
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Enum,
        type_name: "Status",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: None,
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
