crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/es_fluent_derive__macros__derive_es_fluent__tests__expand_es_fluent_generates_tokens_for_struct.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
expression: struct_tokens
---
impl ::es_fluent::FluentMessage for User {
    fn to_fluent_string_with(
        &self,
        localize: &mut dyn for<'__es_fluent_message> FnMut(
            ::es_fluent::registry::StaticFluentDomain,
            ::es_fluent::registry::StaticFluentEntryId,
            Option<&::es_fluent::FluentArgs<'__es_fluent_message>>,
        ) -> String,
    ) -> String {
        {
            let mut args = ::es_fluent::FluentArgs::new();
            {
                use ::es_fluent::__private::IntoFluentArgumentValue as _;
                args.insert(
                    ::es_fluent::registry::StaticFluentArgumentName::new_unchecked("id"),
                    (::es_fluent::__private::FluentBorrowedArgumentValue::new(
                        &(self.id),
                    ))
                        .into_fluent_argument_value(localize),
                );
            }
            localize(
                ::es_fluent::registry::StaticFluentDomain::from_package_name(
                    env!("CARGO_PKG_NAME"),
                ),
                ::es_fluent::registry::StaticFluentEntryId::new_unchecked("user"),
                Some(&args),
            )
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_User {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "User",
            ::es_fluent::registry::StaticFluentEntryId::new_unchecked("user"),
            &[::es_fluent::registry::StaticFluentArgumentName::new_unchecked("id")],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Struct,
        "User",
        VARIANTS,
        file!(),
        module_path!(),
        None,
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
