crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/es_fluent_derive__macros__derive_es_fluent__tests__expand_es_fluent_keeps_later_tuple_default_names_after_field_arg_name_override.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
expression: tokens
---
impl ::es_fluent::FluentMessage for LoginError {
    fn to_fluent_string_with(
        &self,
        localize: &mut dyn for<'__es_fluent_message> FnMut(
            &str,
            &str,
            Option<
                &::std::collections::HashMap<
                    &str,
                    ::es_fluent::FluentValue<'__es_fluent_message>,
                >,
            >,
        ) -> String,
    ) -> String {
        match self {
            Self::Something(f0, f1, f2) => {
                let mut args = ::std::collections::HashMap::new();
                {
                    use ::es_fluent::__private::IntoFluentArgumentValue as _;
                    args.insert(
                        "f0",
                        (::es_fluent::__private::FluentBorrowedArgumentValue::new(f0))
                            .into_fluent_argument_value(localize),
                    );
                }
                {
                    use ::es_fluent::__private::IntoFluentArgumentValue as _;
                    args.insert(
                        "f1",
                        (::es_fluent::__private::FluentBorrowedArgumentValue::new(f1))
                            .into_fluent_argument_value(localize),
                    );
                }
                {
                    use ::es_fluent::__private::IntoFluentArgumentValue as _;
                    args.insert(
                        "f2",
                        (::es_fluent::__private::FluentBorrowedArgumentValue::new(f2))
                            .into_fluent_argument_value(localize),
                    );
                }
                localize(env!("CARGO_PKG_NAME"), "login_error-Something", Some(&args))
            }
        }
    }
}
#[doc(hidden)]
mod __es_fluent_inventory_login_error {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::FtlVariant {
            name: "Something",
            ftl_key: "login_error-Something",
            args: &["f0", "f1", "f2"],
            module_path: module_path!(),
            line: line!(),
        },
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Enum,
        type_name: "LoginError",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: None,
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
