crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/es_fluent_derive__macros__derive_es_fluent__tests__expand_es_fluent_returns_compile_error_for_blocked_enum_namespace.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
expression: enum_tokens
---
compile_error!(
    "Attribute error: namespace 'blocked' is not in the allowed list configured in i18n.toml\nhelp: allowed namespaces are: allowed"
);
