crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/es_fluent_derive__macros__derive_es_fluent__tests__expand_es_fluent_returns_compile_error_for_struct_validation_failure.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
assertion_line: 189
expression: validation_tokens
---
::core::compile_error! {
    "Attribute error in message field: Cannot use #[fluent(arg = \"...\")] on a skipped field"
}
