crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/es_fluent_derive__macros__derive_es_fluent__tests__expand_es_fluent_returns_compile_errors_for_bad_enum_attribute.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
assertion_line: 223
expression: enum_tokens
---
compile_error!(
    "Attribute error in message enum container: `#[fluent(namespace = ...)]` has the wrong value shape for key `namespace` in message enum container `BadEnum`\nhelp: use a namespace rule, for example `namespace = \"ui\"` or `namespace = file`"
);
